<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/text5"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/et1k"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_marginLeft="80dp"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:background="@drawable/edittextduzen"
        android:padding="10dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/et2p"
        android:layout_width="wrap_content"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:background="@drawable/edittextduzen"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btngrs"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:background="@drawable/buttonduzen"
        android:textColor="@color/white"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/btnkayit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:background="@drawable/buttonduzen"
        android:textColor="@color/white"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="30dp"/>


</LinearLayout>